--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav ul li a.active {
 /* HERO SECTION */
 .hero {
     height: 70vh;
-    background: url('https://github.com/JayKanjariya27/travel-explorer/blob/main/background.jpg') center/cover no-repeat;
+    background: url('background.jpg') center/cover no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -229,4 +229,5 @@ nav ul li a.active {
     color: #003f9e;
     text-decoration: underline;
 }
+
 
